# tdd-python

./: .gitignore  README.md  pyproject.toml
lists/: tests.py  views.py
lists/templates/: home.html
superlists/superlists/: settings.py  urls.py
tests/: browser_title.py  functional_tests.py
