[tool.poetry]
name = "tdd-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tdd_python"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.0"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
